// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheetHeader should render center-aligned header correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "padding": 16,
      },
      false,
    ]
  }
  testID="header"
>
  <View
    style={
      {
        "width": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <TouchableOpacity
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 24,
            "justifyContent": "center",
            "opacity": 1,
            "width": 24,
          }
        }
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={16}
          name="ArrowLeft"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
      testID="header-title"
    >
      Center Aligned Title
    </Text>
  </View>
  <View
    style={
      {
        "width": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <TouchableOpacity
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 24,
            "justifyContent": "center",
            "opacity": 1,
            "width": 24,
          }
        }
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={16}
          name="Close"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`BottomSheetHeader should render left-aligned header correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          }
        }
      >
        Left Aligned Title
      </Text>
    </View>
    <View
      style={
        {
          "marginLeft": 16,
        }
      }
    >
      <TouchableOpacity
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 24,
            "justifyContent": "center",
            "opacity": 1,
            "width": 24,
          }
        }
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={16}
          name="Close"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`BottomSheetHeader should render left-aligned header with back button correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "marginRight": 16,
        }
      }
    >
      <TouchableOpacity
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 24,
            "justifyContent": "center",
            "opacity": 1,
            "width": 24,
          }
        }
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={16}
          name="ArrowLeft"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          }
        }
      >
        Left Aligned with Back
      </Text>
    </View>
    <View
      style={
        {
          "marginLeft": 16,
        }
      }
    >
      <TouchableOpacity
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 24,
            "justifyContent": "center",
            "opacity": 1,
            "width": 24,
          }
        }
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={16}
          name="Close"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`BottomSheetHeader should render left-aligned header with custom children correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <div>
        Custom Content
      </div>
    </View>
    <View
      style={
        {
          "marginLeft": 16,
        }
      }
    >
      <TouchableOpacity
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 24,
            "justifyContent": "center",
            "opacity": 1,
            "width": 24,
          }
        }
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={16}
          name="Close"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`BottomSheetHeader should render snapshot correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "padding": 16,
      },
      false,
    ]
  }
  testID="header"
>
  <View
    style={
      {
        "width": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
      testID="header-title"
    >
      Sample Header Title
    </Text>
  </View>
  <View
    style={
      {
        "width": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
    />
  </View>
</View>
`;
